tests/output/self_hosted/line_continuation_error.txt
tests/line_continuation_error.oomph:3: error: string does not terminate

    print("Hello \
          ^^^^^^^^

